--- a/1-states/app/app.html
+++ b/1-states/app/app.html
@@ -16,10 +16,7 @@
     <h2>From {{ email.sender }}</h2>
     <hr>
     <div class="email-body">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse numquam optio sint totam velit! Adipisci corporis cumque, eligendi esse itaque molestiae omnis saepe similique? Consectetur eligendi incidunt modi tempora vero!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse numquam optio sint totam velit! Adipisci corporis cumque, eligendi esse itaque molestiae omnis saepe similique? Consectetur eligendi incidunt modi tempora vero!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse numquam optio sint totam velit! Adipisci corporis cumque, eligendi esse itaque molestiae omnis saepe similique? Consectetur eligendi incidunt modi tempora vero!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse numquam optio sint totam velit! Adipisci corporis cumque, eligendi esse itaque molestiae omnis saepe similique? Consectetur eligendi incidunt modi tempora vero!</p>
+      <pre>{{ email.body }}</pre>
     </div>
   </div>
 </div>
